--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -16,6 +16,8 @@
 *::before,
 *::after {
     box-sizing: border-box;
+    scroll-behavior: smooth;
+    scroll-padding-top: 60vh;
 }
 
 img {
@@ -85,7 +87,7 @@ h1 {
 }
 
 .site-logo {
-    width: 30px;
+    width: 40px;
     aspect-ratio: 1/1;
 }
 
@@ -109,6 +111,33 @@ h1 {
     background-image: radial-gradient(rgba(255, 255, 255, 0.1) 1px, transparent 0);
     background-size: 40px 40px;
     background-position: -0px -40px;
+    position: relative;
+    isolation: isolate;
+
+    &::before {
+        width: 100vw;
+        height: 100vh;
+        position: absolute;
+        left: 0;
+        top: 0;
+        content: '';
+        backdrop-filter: blur(66px);
+        -webkit-backdrop-filter: blur(66px);
+        z-index: -1;
+    }
+
+    &::after {
+        width: 500px;
+        transform: translate(0, -50%);
+        aspect-ratio: 1/1;
+        position: absolute;
+        left: -250px;
+        top: 50%;
+        content: '';
+        background: linear-gradient(#f0b90b, red);
+        z-index: -2;
+        border-radius: 50%;
+    }
 }
 
 .page-content {
@@ -141,7 +170,9 @@ h1 {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    background: #1e1e20; //#242424
+    // background: #1e1e2048; //#242424
+    // backdrop-filter: blur(55px);
+    // -webkit-backdrop-filter: blur(55px);
     padding: 2rem;
     margin-top: 5rem;
 
@@ -176,16 +207,57 @@ h1 {
     margin: auto;
 }
 
+.photo-image {
+    width: 500px;
+    margin-top: 2rem;
+    max-width: 100%;
+    border-radius: 10px;
+    box-shadow: 0 0 20px -5px #f0b90b;
+    padding: .1rem;
+    background: linear-gradient(#f0b90b, red);
+}
+
+ .box-navigation {
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+     overflow: hidden;
+     height: 40px;
+
+     .box-navigation-btn {
+         height: 100% !important;
+         box-shadow: none !important;
+         font-weight: 600;
+
+         &:disabled {
+             background: black !important;
+             opacity: .7;
+             color: white !important;
+         }
+     }
+ }
+
 .hero-area-intro-headline {
     margin-bottom: 1rem;
     font-size: calc(2vw + 25px);
 }
 
 .hero-area-intro-description {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 300;
     width: 700px;
     max-width: 100%;
+}
+
+.offering-panel {
+    width: 100%;
+    height: 400px;
+    background: #252529;
+    box-shadow: 0 10px 20px -7px #161615;
+    box-shadow: 0 0 1px inset rgb(0, 0, 0);
+    overflow: hidden;
+    border-radius: 10px;
+    padding: 1rem;
 }
 
 button.primary-button {
@@ -331,7 +403,7 @@ button.primary-button {
         margin: 0;
     }
 
-    .section-split{
+    .section-split {
         width: 100%;
         justify-content: left;
     }
