--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -1,6 +1,6 @@
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
+    line-height: 1.4;
     font-weight: 400;
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
@@ -48,13 +48,9 @@ body,
 
 a {
     font-weight: 500;
-    color: #646cff;
     text-decoration: inherit;
-}
-
-a:hover {
-    color: #535bf2;
-}
+    color: aliceblue !important;
+} 
 
 h1 {
     margin: 0;
@@ -100,6 +96,14 @@ h1 {
 
     &.left {
         justify-content: left;
+    }
+
+    &.column {
+        flex-direction: column;
+    }
+
+    &.wrap {
+        flex-wrap: wrap;
     }
 }
 
@@ -170,9 +174,6 @@ h1 {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    // background: #1e1e2048; //#242424
-    // backdrop-filter: blur(55px);
-    // -webkit-backdrop-filter: blur(55px);
     padding: 2rem;
     margin-top: 5rem;
 
@@ -217,25 +218,27 @@ h1 {
     background: linear-gradient(#f0b90b, red);
 }
 
- .box-navigation {
-     display: flex;
-     align-items: center;
-     justify-content: space-between;
-     overflow: hidden;
-     height: 40px;
+.box-navigation {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    overflow: hidden;
+    padding-block: 1rem;
+    padding-inline: .5rem;
+    width: 100%;
 
-     .box-navigation-btn {
-         height: 100% !important;
-         box-shadow: none !important;
-         font-weight: 600;
+    .box-navigation-btn {
+        height: 100% !important;
+        box-shadow: none !important;
+        font-weight: 600;
 
-         &:disabled {
-             background: black !important;
-             opacity: .7;
-             color: white !important;
-         }
-     }
- }
+        &:disabled {
+            background: #171718 !important;
+            opacity: .7;
+            color: white !important;
+        }
+    }
+}
 
 .hero-area-intro-headline {
     margin-bottom: 1rem;
@@ -250,14 +253,144 @@ h1 {
 }
 
 .offering-panel {
-    width: 100%;
-    height: 400px;
+    width: 460px;
+    max-width: 100%;
+    // height: 400px;
     background: #252529;
-    box-shadow: 0 10px 20px -7px #161615;
     box-shadow: 0 0 1px inset rgb(0, 0, 0);
     overflow: hidden;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: auto;
+}
+
+.input-control {
+    box-shadow: 0 0 1px inset rgba(0, 0, 0, 0.3), 0 0 1px rgb(118, 118, 118) inset;
+    height: 40px;
+    border-radius: 5px;
+    overflow: hidden;
+    background: #252529;
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+
+    .input-reading {
+        outline: none;
+        border: none;
+        padding-inline: .6rem;
+        font-weight: 400;
+        font-size: 16px;
+        color: white !important;
+        width: 100%;
+
+        &.styled-input {
+            border-radius: 5px;
+            background: inherit;
+        }
+    }
+
+}
+
+.swap-control {
+    display: flex;
+    align-items: center;
+
+    .i {
+        border-radius: 50px;
+        padding: .4rem;
+        height: 30px;
+        width: 30px;
+        background: #252529;
+        opacity: .5;
+    }
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+    appearance: textfield;
+}
+
+.h2-headline {
+    margin: 0;
+    padding: 0;
+}
+
+.panel-dash-value {
+    font-size: 13px;
+    margin: 0;
+    padding: 0;
+}
+
+.wait-clock-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: .6rem;
+    margin-bottom: 1rem;
+
+    .clock-wait {
+        font-family: 'Share Tech Mono', monospace;
+        color: #ffffff;
+        text-align: center;
+        color: #daf6ff;
+        font-size: 18px;
+        font-weight: 900;
+        text-shadow: 0 0 20px rgba(10, 175, 230, 1), 0 0 20px rgba(10, 175, 230, 0);
+    }
+}
+
+.panel-dash {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: .5rem;
+    margin-bottom: .5rem;
+
+    .panel-dash-tab {
+        width: clamp(calc(50% - 1rem), 100px, 100%);
+        border-radius: 5px;
+        background: linear-gradient(#1e1e20, #1e1e20);
+        flex-grow: 1;
+        padding: .6rem;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+    }
+
+    .h2-headline {
+        font-size: 16px;
+    }
+}
+
+
+.not-connected-button-container {
+    width: 100%;
+    max-height: 200px;
     border-radius: 10px;
     padding: 1rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.box-swap {
+    width: 100%;
+    border-radius: 20px;
+    // box-shadow: 0 -1px 5px black;
+    background: #171718;
+    margin-top: .5rem;
+    max-height: 100%;
+    padding: .5rem;
 }
 
 button.primary-button {
